Add ubication filter

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,4 +13,4 @@ sonar.organization=celiaaviles-1
 #sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
-sonar.coverage.exclusions=**/src/**/*.test.*, **/src/main.tsx, **/src/model/*, **/src/types/*, **/index.html, **/src/vite-env.d.ts,  **/src/components/createstormform/*, **/src/components/app.routes/*, **/src/components/details/* 
+sonar.coverage.exclusions=**/src/**/*.test.*, **/src/main.tsx, **/src/model/*, **/src/types/*, **/index.html, **/src/vite-env.d.ts,  **/src/components/createstormform/*, **/src/components/app.routes/*
